# user-session-units

./: .gitignore  Makefile.am  README  TODO  configure.ac
patches/: dbus-fix-sba-for-dbus-activation.patch
src/: launcher.c  pam.c  pam.h
units/system/: systemd-stop-user-sessions.service.in  user-session-launch@.service.in  user-session@.service  user-session@.service.in
units/user/: cmdline.target.in  dbus.service  dbus.service.in  dbus.socket.in  display-server.target.in  e17.target  e17.target.in  enlightenment.service  enlightenment.service.in  gnome-session.service.in  gnome.target.in  graphical.target.in  kde.service.in  kde.target.in  mate-session.service.in  mate.target.in  mythfrontend.service.in  mythtv.target.in  openbox.service.in  openbox.target.in  startkde.service.in  steam.service.in  steam.target.in  xbmc.service  xbmc.service.in  xbmc.target  xbmc.target.in  xfce4-session.service  xfce4-session.service.in  xfce4.target.in  xfconfd.service  xfwm4.service.in
